--- a/index.html
+++ b/index.html
@@ -12,175 +12,240 @@
       margin: 0;
       padding: 0;
     }
+
     header {
       text-align: center;
-      padding: 40px 0 10px;
+      padding: 20px;
+      font-size: 32px;
+      font-weight: bold;
+      border-bottom: 1px solid white;
     }
-    header h1 {
-      font-size: 48px;
-      margin: 0;
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
       font-weight: bold;
     }
-    .shirts-container {
+
+    .section-title {
+      text-align: center;
+      font-size: 24px;
+      margin-top: 30px;
+    }
+
+    .shirts {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 30px;
-      padding: 40px 20px;
-    }
-    .shirt {
-      background-color: #111;
-      border-radius: 12px;
+      gap: 20px;
       padding: 20px;
-      max-width: 260px;
+    }
+
+    .shirt {
+      background-color: #1a1a1a;
+      padding: 10px;
+      border-radius: 10px;
+      width: 250px;
       text-align: center;
     }
+
     .shirt img {
-      max-width: 100%;
-      border-radius: 8px;
-    }
-    .shirt h3 {
-      margin: 10px 0 5px;
-    }
-    .price {
-      margin-bottom: 10px;
-      color: white;
-      font-weight: bold;
-    }
-    .button {
-      display: block;
       width: 100%;
-      padding: 10px;
-      margin: 5px 0;
-      background-color: black;
-      color: white;
-      border: 2px solid white;
-      cursor: pointer;
-      border-radius: 6px;
+      border-radius: 10px;
     }
+
+    .shirt p {
+      margin: 10px 0 5px;
+      color: white;
+    }
+
+    .button-group {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      margin-top: 10px;
+    }
+
+    .button-group button {
+      background-color: black;
+      border: 1px solid white;
+      color: white;
+      padding: 10px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
     .cart-icon {
       position: fixed;
       bottom: 20px;
       right: 20px;
       background-color: white;
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      padding: 10px;
       cursor: pointer;
+      z-index: 1000;
     }
+
     .cart-icon img {
       width: 24px;
       height: 24px;
     }
-    #cartModal {
+
+    .cart-popup {
       position: fixed;
-      bottom: 80px;
+      bottom: 70px;
       right: 20px;
-      background-color: #222;
-      color: white;
-      border: 2px solid white;
+      background-color: white;
+      color: black;
+      border-radius: 10px;
       padding: 15px;
-      border-radius: 12px;
+      max-width: 300px;
       display: none;
       z-index: 999;
     }
-    #cartItems {
-      max-height: 200px;
-      overflow-y: auto;
-      margin-bottom: 10px;
+
+    .cart-popup h3 {
+      margin-top: 0;
+    }
+
+    .cart-popup ul {
+      padding-left: 20px;
+    }
+
+    .cart-popup button {
+      margin-top: 10px;
+      background-color: black;
+      color: white;
+      padding: 8px 12px;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    .remove-btn {
+      color: red;
+      cursor: pointer;
+      margin-left: 10px;
+      font-size: 12px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>KORVI</h1>
-    <h2>Featured T-Shirts</h2>
-  </header>
 
-  <div class="shirts-container">
+  <header>KORVI</header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="tops.html">Tops</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <div class="section-title">Featured T-Shirts</div>
+  <div class="shirts">
     <div class="shirt">
       <img src="drake.jpg" alt="Drake Shirt" />
-      <h3>Drake</h3>
-      <p class="price">Rs. 2999</p>
-      <button class="button" onclick="buyNow('Drake', 2999)">Buy Now</button>
-      <button class="button" onclick="addToCart('Drake', 2999)">Add to Cart</button>
+      <p>Drake T-Shirt</p>
+      <p>Rs. 2999</p>
+      <div class="button-group">
+        <button onclick="addToCart('Drake T-Shirt', 2999)">Add to Cart</button>
+        <button onclick="buyNow('Drake T-Shirt', 2999)">Buy Now</button>
+      </div>
     </div>
     <div class="shirt">
-      <img src="weeknd.jpg" alt="Weeknd Shirt" id="weekndImg" />
-      <h3>Weeknd</h3>
-      <p class="price">Rs. 2999</p>
-      <button class="button" onclick="buyNow('Weeknd', 2999)">Buy Now</button>
-      <button class="button" onclick="addToCart('Weeknd', 2999)">Add to Cart</button>
+      <img src="weeknd.jpg" alt="Weeknd Shirt" />
+      <p>Weeknd T-Shirt</p>
+      <p>Rs. 2999</p>
+      <div class="button-group">
+        <button onclick="addToCart('Weeknd T-Shirt', 2999)">Add to Cart</button>
+        <button onclick="buyNow('Weeknd T-Shirt', 2999)">Buy Now</button>
+      </div>
     </div>
     <div class="shirt">
       <img src="wrecked.jpg" alt="Wrecked Shirt" />
-      <h3>Wrecked</h3>
-      <p class="price">Rs. 2999</p>
-      <button class="button" onclick="buyNow('Wrecked', 2999)">Buy Now</button>
-      <button class="button" onclick="addToCart('Wrecked', 2999)">Add to Cart</button>
+      <p>Wrecked T-Shirt</p>
+      <p>Rs. 2999</p>
+      <div class="button-group">
+        <button onclick="addToCart('Wrecked T-Shirt', 2999)">Add to Cart</button>
+        <button onclick="buyNow('Wrecked T-Shirt', 2999)">Buy Now</button>
+      </div>
     </div>
   </div>
 
-  <!-- Cart Icon -->
   <div class="cart-icon" onclick="toggleCart()">
     <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Cart" />
   </div>
 
-  <!-- Cart Modal -->
-  <div id="cartModal">
-    <div id="cartItems"></div>
-    <button class="button" onclick="purchaseAll()">Purchase All (COD)</button>
+  <div class="cart-popup" id="cartPopup">
+    <h3>Your Cart</h3>
+    <ul id="cartItems"></ul>
+    <button onclick="checkout()">Checkout (COD)</button>
   </div>
 
   <script>
-    const sharedCartKey = 'korviCart';
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
 
     function addToCart(item, price) {
-      const cart = JSON.parse(localStorage.getItem(sharedCartKey)) || [];
       cart.push({ item, price });
-      localStorage.setItem(sharedCartKey, JSON.stringify(cart));
-      alert(`${item} added to cart.`);
-      renderCart();
-    }
-
-    function toggleCart() {
-      const modal = document.getElementById("cartModal");
-      modal.style.display = modal.style.display === "block" ? "none" : "block";
-      renderCart();
-    }
-
-    function renderCart() {
-      const cart = JSON.parse(localStorage.getItem(sharedCartKey)) || [];
-      const cartItems = document.getElementById("cartItems");
-      cartItems.innerHTML = cart.length
-        ? cart.map(c => `<p>${c.item} - Rs. ${c.price}</p>`).join('')
-        : "<p>Cart is empty.</p>";
+      localStorage.setItem("cart", JSON.stringify(cart));
+      alert(item + " added to cart!");
+      updateCartDisplay();
     }
 
     function buyNow(item, price) {
-      alert(`Order placed for ${item} via COD. We will contact you soon.`);
+      const name = prompt("Enter your name:");
+      const contact = prompt("Enter your contact number:");
+      const email = prompt("Enter your email:");
+      const address = prompt("Enter your address:");
+
+      const details = `Order: ${item} (Rs. ${price})\nName: ${name}\nContact: ${contact}\nEmail: ${email}\nAddress: ${address}`;
+      window.location.href = `mailto:korviclothing@gmail.com?subject=New Order (COD)&body=${encodeURIComponent(details)}`;
     }
 
-    function purchaseAll() {
-      const cart = JSON.parse(localStorage.getItem(sharedCartKey)) || [];
-      if (cart.length === 0) {
-        alert("Cart is empty.");
-        return;
-      }
-      let message = "Order Summary (COD):\n";
-      let total = 0;
-      cart.forEach(c => {
-        message += `${c.item} - Rs. ${c.price}\n`;
-        total += c.price;
-      });
-      message += `\nTotal: Rs. ${total}\nThank you for shopping!`;
-      alert(message);
-      localStorage.removeItem(sharedCartKey);
-      renderCart();
+    function toggleCart() {
+      const cartPopup = document.getElementById("cartPopup");
+      cartPopup.style.display = cartPopup.style.display === "block" ? "none" : "block";
+      updateCartDisplay();
     }
+
+    function updateCartDisplay() {
+      const cartItemsList = document.getElementById("cartItems");
+      cartItemsList.innerHTML = "";
+      cart.forEach((item, index) => {
+        const li = document.createElement("li");
+        li.textContent = `${item.item} - Rs. ${item.price}`;
+        const removeBtn = document.createElement("span");
+        removeBtn.textContent = "Remove";
+        removeBtn.className = "remove-btn";
+        removeBtn.onclick = () => removeFromCart(index);
+        li.appendChild(removeBtn);
+        cartItemsList.appendChild(li);
+      });
+    }
+
+    function removeFromCart(index) {
+      cart.splice(index, 1);
+      localStorage.setItem("cart", JSON.stringify(cart));
+      updateCartDisplay();
+    }
+
+    function checkout() {
+      const name = prompt("Enter your name:");
+      const contact = prompt("Enter your contact number:");
+      const email = prompt("Enter your email:");
+      const address = prompt("Enter your address:");
+      const items = cart.map(item => `${item.item} (Rs. ${item.price})`).join("\n");
+
+      const body = `Order:\n${items}\n\nName: ${name}\nContact: ${contact}\nEmail: ${email}\nAddress: ${address}`;
+      window.location.href = `mailto:korviclothing@gmail.com?subject=New COD Order&body=${encodeURIComponent(body)}`;
+    }
+
+    updateCartDisplay();
   </script>
 </body>
 </html>
