--- a/tops.html
+++ b/tops.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Korvi Tops</title>
+  <title>Korvi - Tops</title>
   <style>
     body {
       background-color: black;
@@ -13,27 +13,33 @@
       padding: 0;
     }
     header {
-      text-align: center;
-      padding: 40px 0 10px;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 2px solid white;
     }
     header h1 {
-      font-size: 40px;
-      margin: 0;
+      font-size: 32px;
+    }
+    nav a {
+      margin: 0 10px;
+      color: white;
+      text-decoration: none;
       font-weight: bold;
     }
-    .shirts-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+    .shirts {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 30px;
-      padding: 40px 20px;
+      padding: 30px;
     }
     .shirt {
       background-color: #111;
-      border-radius: 12px;
       padding: 20px;
-      max-width: 260px;
+      border-radius: 12px;
       text-align: center;
+      box-shadow: 0 0 10px #222;
     }
     .shirt img {
       max-width: 100%;
@@ -44,157 +50,209 @@
     }
     .price {
       margin-bottom: 10px;
-      color: white;
       font-weight: bold;
     }
-    .button {
-      display: block;
-      width: 100%;
-      padding: 10px;
-      margin: 5px 0;
-      background-color: black;
+    .shirt button {
+      background: black;
       color: white;
       border: 2px solid white;
-      cursor: pointer;
+      padding: 8px;
+      margin: 5px 0;
+      width: 100%;
       border-radius: 6px;
+      cursor: pointer;
     }
     .cart-icon {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background-color: white;
+      background: white;
       border-radius: 50%;
       width: 50px;
       height: 50px;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       cursor: pointer;
-      z-index: 1000;
     }
     .cart-icon img {
       width: 24px;
       height: 24px;
     }
-    #cartModal {
+    #cart {
       position: fixed;
       bottom: 80px;
       right: 20px;
-      background-color: #222;
-      color: white;
-      border: 2px solid white;
+      background: #111;
       padding: 15px;
-      border-radius: 12px;
+      border: 1px solid white;
+      border-radius: 10px;
       display: none;
-      z-index: 999;
+      color: white;
+      max-width: 300px;
     }
-    #cartItems {
-      max-height: 200px;
-      overflow-y: auto;
-      margin-bottom: 10px;
+    #cart h3 {
+      margin-top: 0;
+    }
+    .cart-item {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 5px;
+    }
+    .remove-btn {
+      background: red;
+      border: none;
+      color: white;
+      cursor: pointer;
+      font-size: 12px;
+      padding: 2px 6px;
+      border-radius: 4px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Korvi - All Tops</h1>
+    <h1>KORVI</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="tops.html">Tops</a>
+      <a href="#">Contact</a>
+    </nav>
   </header>
 
-  <div class="shirts-container">
+  <div class="shirts">
     <div class="shirt">
-      <img src="drake.jpg" alt="Drake Shirt" />
-      <h3>Drake</h3>
-      <p class="price">Rs. 2999</p>
-      <button class="button" onclick="buyNow('Drake', 2999)">Buy Now</button>
-      <button class="button" onclick="addToCart('Drake', 2999)">Add to Cart</button>
+      <img src="drake.jpg" alt="Drake Tee">
+      <h3>Drake Tee</h3>
+      <p class="price">Rs 2999</p>
+      <button onclick="addToCart('Drake Tee', 2999)">Add to Cart</button>
+      <button onclick="checkout('Drake Tee', 2999)">Buy Now</button>
     </div>
     <div class="shirt">
-      <img src="weeknd.jpg" alt="Weeknd Shirt" />
-      <h3>Weeknd</h3>
-      <p class="price">Rs. 2999</p>
-      <button class="button" onclick="buyNow('Weeknd', 2999)">Buy Now</button>
-      <button class="button" onclick="addToCart('Weeknd', 2999)">Add to Cart</button>
+      <img src="weeknd.jpg" alt="The Weeknd Tee">
+      <h3>The Weeknd Tee</h3>
+      <p class="price">Rs 2999</p>
+      <button onclick="addToCart('The Weeknd Tee', 2999)">Add to Cart</button>
+      <button onclick="checkout('The Weeknd Tee', 2999)">Buy Now</button>
     </div>
     <div class="shirt">
-      <img src="wrecked.jpg" alt="Wrecked Shirt" />
-      <h3>Wrecked</h3>
-      <p class="price">Rs. 2999</p>
-      <button class="button" onclick="buyNow('Wrecked', 2999)">Buy Now</button>
-      <button class="button" onclick="addToCart('Wrecked', 2999)">Add to Cart</button>
+      <img src="wrecked.jpg" alt="Wrecked Tee">
+      <h3>Wrecked Tee</h3>
+      <p class="price">Rs 2999</p>
+      <button onclick="addToCart('Wrecked Tee', 2999)">Add to Cart</button>
+      <button onclick="checkout('Wrecked Tee', 2999)">Buy Now</button>
     </div>
     <div class="shirt">
-      <img src="david.jpg" alt="David Shirt" />
-      <h3>David</h3>
-      <p class="price">Rs. 2999</p>
-      <button class="button" onclick="buyNow('David', 2999)">Buy Now</button>
-      <button class="button" onclick="addToCart('David', 2999)">Add to Cart</button>
+      <img src="david.jpg" alt="David Tee">
+      <h3>David Tee</h3>
+      <p class="price">Rs 2999</p>
+      <button onclick="addToCart('David Tee', 2999)">Add to Cart</button>
+      <button onclick="checkout('David Tee', 2999)">Buy Now</button>
     </div>
     <div class="shirt">
-      <img src="thoughts.jpg" alt="Lost in Thoughts Shirt" />
-      <h3>Lost in Thoughts</h3>
-      <p class="price">Rs. 2999</p>
-      <button class="button" onclick="buyNow('Lost in Thoughts', 2999)">Buy Now</button>
-      <button class="button" onclick="addToCart('Lost in Thoughts', 2999)">Add to Cart</button>
+      <img src="buried.jpg" alt="Buried in Thoughts Tee">
+      <h3>Buried in Thoughts Tee</h3>
+      <p class="price">Rs 2499</p>
+      <button onclick="addToCart('Buried in Thoughts Tee', 2499)">Add to Cart</button>
+      <button onclick="checkout('Buried in Thoughts Tee', 2499)">Buy Now</button>
     </div>
   </div>
 
-  <!-- Cart Icon -->
   <div class="cart-icon" onclick="toggleCart()">
-    <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Cart" />
+    <img src="https://cdn-icons-png.flaticon.com/512/833/833314.png" alt="Cart">
   </div>
 
-  <!-- Cart Modal -->
-  <div id="cartModal">
-    <div id="cartItems"></div>
-    <button class="button" onclick="purchaseAll()">Purchase All (COD)</button>
+  <div id="cart">
+    <h3>Cart</h3>
+    <div id="cart-items"></div>
+    <p id="total"></p>
+    <button onclick="checkoutCart()">Purchase All</button>
   </div>
 
   <script>
-    const sharedCartKey = 'korviCart';
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
 
-    function addToCart(item, price) {
-      const cart = JSON.parse(localStorage.getItem(sharedCartKey)) || [];
-      cart.push({ item, price });
-      localStorage.setItem(sharedCartKey, JSON.stringify(cart));
-      alert(`${item} added to cart.`);
+    function saveCart() {
+      localStorage.setItem('cart', JSON.stringify(cart));
+    }
+
+    function addToCart(name, price) {
+      cart.push({ name, price });
+      saveCart();
+      alert(`${name} added to cart`);
       renderCart();
     }
 
     function toggleCart() {
-      const modal = document.getElementById("cartModal");
-      modal.style.display = modal.style.display === "block" ? "none" : "block";
+      const cartEl = document.getElementById('cart');
+      cartEl.style.display = cartEl.style.display === 'block' ? 'none' : 'block';
       renderCart();
     }
 
     function renderCart() {
-      const cart = JSON.parse(localStorage.getItem(sharedCartKey)) || [];
-      const cartItems = document.getElementById("cartItems");
-      cartItems.innerHTML = cart.length
-        ? cart.map(c => `<p>${c.item} - Rs. ${c.price}</p>`).join('')
-        : "<p>Cart is empty.</p>";
-    }
-
-    function buyNow(item, price) {
-      alert(`Order placed for ${item} via COD. We will contact you soon.`);
-    }
-
-    function purchaseAll() {
-      const cart = JSON.parse(localStorage.getItem(sharedCartKey)) || [];
-      if (cart.length === 0) {
-        alert("Cart is empty.");
-        return;
-      }
-      let message = "Order Summary (COD):\n";
+      const cartItems = document.getElementById('cart-items');
+      cartItems.innerHTML = '';
       let total = 0;
-      cart.forEach(c => {
-        message += `${c.item} - Rs. ${c.price}\n`;
-        total += c.price;
+      cart.forEach((item, index) => {
+        total += item.price;
+        cartItems.innerHTML += `
+          <div class="cart-item">
+            <span>${item.name} - Rs ${item.price}</span>
+            <button class="remove-btn" onclick="removeItem(${index})">X</button>
+          </div>`;
       });
-      message += `\nTotal: Rs. ${total}\nThank you for shopping!`;
-      alert(message);
-      localStorage.removeItem(sharedCartKey);
+      document.getElementById('total').textContent = `Total: Rs ${total}`;
+    }
+
+    function removeItem(index) {
+      cart.splice(index, 1);
+      saveCart();
       renderCart();
     }
+
+    function checkout(name, price) {
+      const size = prompt('Select size: Small / Medium / Large');
+      if (!size) return;
+      const fullName = prompt('Enter your name:');
+      const address = prompt('Enter your address:');
+      const contact = prompt('Enter your contact number:');
+      const email = prompt('Enter your email:');
+      const message = `
+New COD Order:
+Product: ${name}
+Size: ${size}
+Name: ${fullName}
+Address: ${address}
+Contact: ${contact}
+Email: ${email}`;
+      alert("Order Placed!\n" + message);
+      // You can hook this message to an email system later
+    }
+
+    function checkoutCart() {
+      if (cart.length === 0) {
+        alert("Cart is empty!");
+        return;
+      }
+      const fullName = prompt('Enter your name:');
+      const address = prompt('Enter your address:');
+      const contact = prompt('Enter your contact number:');
+      const email = prompt('Enter your email:');
+      let orderDetails = cart.map(item => `${item.name} - Rs ${item.price}`).join('\n');
+      const message = `
+New COD Cart Order:
+${orderDetails}
+Name: ${fullName}
+Address: ${address}
+Contact: ${contact}
+Email: ${email}`;
+      alert("Order Placed!\n" + message);
+      cart = [];
+      saveCart();
+      renderCart();
+    }
+
+    renderCart();
   </script>
 </body>
 </html>
