--- a/tops.html
+++ b/tops.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Korvi - Tops</title>
+  <title>Korvi Tops</title>
   <style>
     body {
       background-color: black;
@@ -13,54 +13,45 @@
       padding: 0;
     }
     header {
-      padding: 20px;
+      padding: 10px 20px;
+      border-bottom: 1px solid white;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border-bottom: 2px solid white;
-    }
-    header h1 {
-      font-size: 32px;
     }
     nav a {
-      margin: 0 10px;
       color: white;
       text-decoration: none;
+      margin: 0 10px;
       font-weight: bold;
     }
-    .shirts {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 30px;
-      padding: 30px;
-    }
-    .shirt {
-      background-color: #111;
-      padding: 20px;
-      border-radius: 12px;
+    h1 {
       text-align: center;
-      box-shadow: 0 0 10px #222;
+      margin-top: 20px;
     }
-    .shirt img {
-      max-width: 100%;
-      border-radius: 8px;
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 20px;
+      padding: 20px;
     }
-    .shirt h3 {
-      margin: 10px 0 5px;
+    .product {
+      text-align: center;
     }
-    .price {
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-    .shirt button {
-      background: black;
-      color: white;
-      border: 2px solid white;
-      padding: 8px;
-      margin: 5px 0;
+    .product img {
       width: 100%;
-      border-radius: 6px;
+      max-height: 300px;
+      object-fit: cover;
+    }
+    .btn {
+      display: block;
+      margin: 5px auto;
+      padding: 8px 12px;
+      background-color: black;
+      border: 2px solid white;
+      color: white;
       cursor: pointer;
+      width: 100px;
     }
     .cart-icon {
       position: fixed;
@@ -74,45 +65,38 @@
       justify-content: center;
       align-items: center;
       cursor: pointer;
+      z-index: 100;
     }
     .cart-icon img {
       width: 24px;
       height: 24px;
     }
     #cart {
+      display: none;
       position: fixed;
       bottom: 80px;
       right: 20px;
       background: #111;
-      padding: 15px;
       border: 1px solid white;
-      border-radius: 10px;
-      display: none;
+      padding: 10px;
+      width: 300px;
+      z-index: 101;
       color: white;
-      max-width: 300px;
     }
-    #cart h3 {
-      margin-top: 0;
+    #cartItems {
+      max-height: 200px;
+      overflow-y: auto;
     }
     .cart-item {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 5px;
-    }
-    .remove-btn {
-      background: red;
-      border: none;
-      color: white;
-      cursor: pointer;
-      font-size: 12px;
-      padding: 2px 6px;
-      border-radius: 4px;
+      margin-bottom: 10px;
+      border-bottom: 1px solid #444;
+      padding-bottom: 5px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>KORVI</h1>
+    <div><h2>KORVI</h2></div>
     <nav>
       <a href="index.html">Home</a>
       <a href="tops.html">Tops</a>
@@ -120,139 +104,163 @@
     </nav>
   </header>
 
-  <div class="shirts">
-    <div class="shirt">
-      <img src="drake.jpg" alt="Drake Tee">
-      <h3>Drake Tee</h3>
-      <p class="price">Rs 2999</p>
-      <button onclick="addToCart('Drake Tee', 2999)">Add to Cart</button>
-      <button onclick="checkout('Drake Tee', 2999)">Buy Now</button>
+  <h1>Tops</h1>
+  <div class="products">
+    <div class="product">
+      <img src="wrecked.jpg" alt="Wrecked Shirt" />
+      <h3>Wrecked T-Shirt</h3>
+      <p>₨2999</p>
+      <button class="btn" onclick="buyNow('Wrecked T-Shirt', 2999)">Buy Now</button>
+      <button class="btn" onclick="addToCart('Wrecked T-Shirt', 2999)">Add to Cart</button>
     </div>
-    <div class="shirt">
-      <img src="weeknd.jpg" alt="The Weeknd Tee">
-      <h3>The Weeknd Tee</h3>
-      <p class="price">Rs 2999</p>
-      <button onclick="addToCart('The Weeknd Tee', 2999)">Add to Cart</button>
-      <button onclick="checkout('The Weeknd Tee', 2999)">Buy Now</button>
+    <div class="product">
+      <img src="drake.jpg" alt="Drake Shirt" />
+      <h3>Drake T-Shirt</h3>
+      <p>₨2999</p>
+      <button class="btn" onclick="buyNow('Drake T-Shirt', 2999)">Buy Now</button>
+      <button class="btn" onclick="addToCart('Drake T-Shirt', 2999)">Add to Cart</button>
     </div>
-    <div class="shirt">
-      <img src="wrecked.jpg" alt="Wrecked Tee">
-      <h3>Wrecked Tee</h3>
-      <p class="price">Rs 2999</p>
-      <button onclick="addToCart('Wrecked Tee', 2999)">Add to Cart</button>
-      <button onclick="checkout('Wrecked Tee', 2999)">Buy Now</button>
+    <div class="product">
+      <img src="weeknd.jpg" alt="The Weeknd Shirt" />
+      <h3>The Weeknd T-Shirt</h3>
+      <p>₨2999</p>
+      <button class="btn" onclick="buyNow('The Weeknd T-Shirt', 2999)">Buy Now</button>
+      <button class="btn" onclick="addToCart('The Weeknd T-Shirt', 2999)">Add to Cart</button>
     </div>
-    <div class="shirt">
-      <img src="david.jpg" alt="David Tee">
-      <h3>David Tee</h3>
-      <p class="price">Rs 2999</p>
-      <button onclick="addToCart('David Tee', 2999)">Add to Cart</button>
-      <button onclick="checkout('David Tee', 2999)">Buy Now</button>
+    <div class="product">
+      <img src="david.jpg" alt="David Shirt" />
+      <h3>David T-Shirt</h3>
+      <p>₨2999</p>
+      <button class="btn" onclick="buyNow('David T-Shirt', 2999)">Buy Now</button>
+      <button class="btn" onclick="addToCart('David T-Shirt', 2999)">Add to Cart</button>
     </div>
-    <div class="shirt">
-      <img src="buried.jpg" alt="Buried in Thoughts Tee">
-      <h3>Buried in Thoughts Tee</h3>
-      <p class="price">Rs 2499</p>
-      <button onclick="addToCart('Buried in Thoughts Tee', 2499)">Add to Cart</button>
-      <button onclick="checkout('Buried in Thoughts Tee', 2499)">Buy Now</button>
+    <div class="product">
+      <img src="buried.jpg" alt="Buried in Thoughts Shirt" />
+      <h3>Buried in Thoughts T-Shirt</h3>
+      <p>₨2499</p>
+      <button class="btn" onclick="buyNow('Buried in Thoughts T-Shirt', 2499)">Buy Now</button>
+      <button class="btn" onclick="addToCart('Buried in Thoughts T-Shirt', 2499)">Add to Cart</button>
     </div>
   </div>
 
   <div class="cart-icon" onclick="toggleCart()">
-    <img src="https://cdn-icons-png.flaticon.com/512/833/833314.png" alt="Cart">
+    <img src="https://img.icons8.com/ios-filled/50/000000/shopping-cart.png" alt="Cart" />
   </div>
 
   <div id="cart">
-    <h3>Cart</h3>
-    <div id="cart-items"></div>
-    <p id="total"></p>
-    <button onclick="checkoutCart()">Purchase All</button>
+    <h3>Your Cart</h3>
+    <div id="cartItems"></div>
+    <button class="btn" onclick="purchaseCart()">Purchase All</button>
   </div>
 
   <script>
-    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    const cart = JSON.parse(localStorage.getItem('cart')) || [];
 
     function saveCart() {
       localStorage.setItem('cart', JSON.stringify(cart));
     }
 
-    function addToCart(name, price) {
-      cart.push({ name, price });
-      saveCart();
-      alert(`${name} added to cart`);
-      renderCart();
-    }
-
     function toggleCart() {
-      const cartEl = document.getElementById('cart');
-      cartEl.style.display = cartEl.style.display === 'block' ? 'none' : 'block';
-      renderCart();
+      const cartDiv = document.getElementById('cart');
+      cartDiv.style.display = cartDiv.style.display === 'block' ? 'none' : 'block';
+      displayCart();
     }
 
-    function renderCart() {
-      const cartItems = document.getElementById('cart-items');
+    function addToCart(item, price) {
+      cart.push({ item, price });
+      saveCart();
+      alert(`${item} added to cart`);
+    }
+
+    function displayCart() {
+      const cartItems = document.getElementById('cartItems');
       cartItems.innerHTML = '';
-      let total = 0;
-      cart.forEach((item, index) => {
-        total += item.price;
-        cartItems.innerHTML += `
-          <div class="cart-item">
-            <span>${item.name} - Rs ${item.price}</span>
-            <button class="remove-btn" onclick="removeItem(${index})">X</button>
-          </div>`;
+      cart.forEach((entry, index) => {
+        const div = document.createElement('div');
+        div.className = 'cart-item';
+        div.innerHTML = `
+          ${entry.item} - ₨${entry.price}
+          <button class="btn" style="width:auto;margin-top:5px;" onclick="removeFromCart(${index})">Remove</button>
+        `;
+        cartItems.appendChild(div);
       });
-      document.getElementById('total').textContent = `Total: Rs ${total}`;
     }
 
-    function removeItem(index) {
+    function removeFromCart(index) {
       cart.splice(index, 1);
       saveCart();
-      renderCart();
+      displayCart();
     }
 
-    function checkout(name, price) {
-      const size = prompt('Select size: Small / Medium / Large');
+    function buyNow(item, price) {
+      const size = prompt("Choose size: Small, Medium, or Large");
       if (!size) return;
-      const fullName = prompt('Enter your name:');
-      const address = prompt('Enter your address:');
-      const contact = prompt('Enter your contact number:');
-      const email = prompt('Enter your email:');
-      const message = `
-New COD Order:
-Product: ${name}
+
+      const name = prompt("Enter your full name:");
+      const address = prompt("Enter your address:");
+      const contact = prompt("Enter your contact number:");
+      const email = prompt("Enter your email:");
+
+      if (name && address && contact && email) {
+        const message = `
+New Order via Buy Now:
+
+Product: ${item}
+Price: ₨${price}
 Size: ${size}
-Name: ${fullName}
+
+Customer Info:
+Name: ${name}
 Address: ${address}
 Contact: ${contact}
-Email: ${email}`;
-      alert("Order Placed!\n" + message);
-      // You can hook this message to an email system later
-    }
-
-    function checkoutCart() {
-      if (cart.length === 0) {
-        alert("Cart is empty!");
-        return;
+Email: ${email}
+        `;
+        window.open(`mailto:korviclothing@gmail.com?subject=New Order&body=${encodeURIComponent(message)}`);
+        alert("Order placed successfully!");
       }
-      const fullName = prompt('Enter your name:');
-      const address = prompt('Enter your address:');
-      const contact = prompt('Enter your contact number:');
-      const email = prompt('Enter your email:');
-      let orderDetails = cart.map(item => `${item.name} - Rs ${item.price}`).join('\n');
-      const message = `
-New COD Cart Order:
-${orderDetails}
-Name: ${fullName}
-Address: ${address}
-Contact: ${contact}
-Email: ${email}`;
-      alert("Order Placed!\n" + message);
-      cart = [];
-      saveCart();
-      renderCart();
     }
 
-    renderCart();
+    function purchaseCart() {
+      if (cart.length === 0) return alert("Your cart is empty!");
+
+      const size = prompt("Choose size for all items: Small, Medium, or Large");
+      if (!size) return;
+
+      const name = prompt("Enter your full name:");
+      const address = prompt("Enter your address:");
+      const contact = prompt("Enter your contact number:");
+      const email = prompt("Enter your email:");
+
+      if (name && address && contact && email) {
+        let items = '';
+        cart.forEach(item => {
+          items += `${item.item} - ₨${item.price}\n`;
+        });
+
+        const message = `
+New Order via Cart:
+
+Products:
+${items}
+
+Total: ₨${cart.reduce((acc, cur) => acc + cur.price, 0)}
+Size: ${size}
+
+Customer Info:
+Name: ${name}
+Address: ${address}
+Contact: ${contact}
+Email: ${email}
+        `;
+        window.open(`mailto:korviclothing@gmail.com?subject=Cart Order&body=${encodeURIComponent(message)}`);
+        alert("Order placed successfully!");
+        cart.length = 0;
+        saveCart();
+        displayCart();
+      }
+    }
+
+    displayCart();
   </script>
 </body>
 </html>
